# research-project-processing

./: .gitignore  README.md  app.py  main.py  pyproject.toml  send_project_url.py
config/: Subjects_MASTER.xlsx  __init__.py  experiment.py  logging_config.py  paths.py
output/: all_subjects_results.csv
pages/: 00_生データ.py  20_軌跡の可視化.py  30_生データ_個別にプロット.py  30_生データ_重ねてプロット.py
schemas/: df_processed_schema.py  df_result_schema.py  df_simout_schema.py  df_subject_master.py
simout/: create_dummy_data.ipynb  output_01_60_A_20250328_134725.csv  output_02_60_B_20250328_134732.csv  output_03_60_A_20250328_134736.csv  output_04_60_B_20250328_134739.csv  output_05_60_A_20250328_134742.csv  output_06_60_B_20250328_134746.csv  output_07_60_A_20250328_134750.csv  output_08_60_B_20250328_134753.csv  output_09_60_A_20250328_134756.csv  output_10_60_B_20250328_134800.csv
src/: data_manager.py  experiment_processor.py  master_data_manager.py  metric_calculator.py  subject_manager.py  subject_processor.py
src/plots/: plot_t_v_a_gas_distance.py  plot_trajectory.py
