[project]
name = "research-project-processing"
version = "0.1.0"
description = "For git publication. This is a data processing project for university research, including visualization with Streamlit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "plotly>=6.0.1",
    "pydantic>=2.10.6",
    "seaborn>=0.13.2",
    "streamlit>=1.43.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
